force-app/main/default/objects/Opportunity_Staging__mdt/Opportunity_Staging__mdt.object-meta.xml
<CustomObject>
    <description>Used in OpportunityTriggerHandler in order to validate which stages are valid to update</description>
    <label>Opportunity Staging</label>
    <pluralLabel>Opportunity Stagings</pluralLabel>
</CustomObject>