force-app/main/default/objects/Opportunity_Staging__mdt/fields/Mandatory_Fields__c.field-meta.xml
<CustomField>
    <fullName>Mandatory_Fields__c</fullName>
    <description>Which fields are mandatory on Opportunity Object in order to update to this stage. (Separated by comma)</description>
    <label>Mandatory Fields</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>