force-app/main/default/objects/Opportunity_Staging__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Indicates the order of each stagename for the New Construction Opportunity Record Type</description>
    <label>Order</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>