force-app/main/default/objects/Opportunity_Staging__mdt/fields/Related_Date_Field__c.field-meta.xml
<CustomField>
    <fullName>Related_Date_Field__c</fullName>
    <label>Related Date Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>